--- a/src/collegeapp/facultyGUI.form
+++ b/src/collegeapp/facultyGUI.form
@@ -197,12 +197,6 @@
                                           </Group>
                                       </Group>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                                              <Component id="datePicker1" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Component id="comboBoxCreateAssignment" min="-2" max="-2" attributes="0"/>
-                                          </Group>
                                           <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                               <Group type="102" attributes="0">
                                                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
@@ -218,10 +212,16 @@
                                               </Group>
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
-                                              <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-                                              <Component id="datePicker2" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                                              <Component id="datePicker2" min="-2" pref="117" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
                                               <Component id="comboBoxModifyAssignment" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" attributes="0">
+                                              <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+                                              <Component id="datePicker1" min="-2" pref="127" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="comboBoxCreateAssignment" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                   </Group>
@@ -232,7 +232,7 @@
                                       <Component id="deleteAssignmentButton" min="-2" pref="153" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace pref="23" max="32767" attributes="0"/>
+                              <EmptySpace pref="27" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -260,11 +260,11 @@
                                               <Component id="subjectField1" alignment="3" min="-2" max="-2" attributes="0"/>
                                               <Component id="assignmentField" alignment="3" min="-2" max="-2" attributes="0"/>
                                               <Component id="comboBoxCourse" alignment="3" min="-2" max="-2" attributes="0"/>
-                                              <Component id="datePicker1" alignment="3" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                           <Component id="comboBoxCreateAssignment" min="-2" max="-2" attributes="0"/>
+                                          <Component id="datePicker1" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                                       <Component id="createAssignmentButton" min="-2" pref="35" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
@@ -283,7 +283,7 @@
                                   <Component id="courseLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Component id="jScrollPane2" pref="0" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" pref="362" max="32767" attributes="0"/>
                       </Group>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
@@ -293,12 +293,14 @@
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="subjectField2" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="assignmentComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="courseField2" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="datePicker2" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="comboBoxModifyAssignment" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="3" attributes="0">
+                                      <Component id="subjectField2" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="assignmentComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="courseField2" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="comboBoxModifyAssignment" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="datePicker2" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -534,9 +536,9 @@
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
-            <Component class="org.jdesktop.swingx.JXDatePicker" name="datePicker1">
+            <Component class="com.toedter.calendar.JDateChooser" name="datePicker1">
             </Component>
-            <Component class="org.jdesktop.swingx.JXDatePicker" name="datePicker2">
+            <Component class="com.toedter.calendar.JDateChooser" name="datePicker2">
             </Component>
           </SubComponents>
         </Container>
