--- a/src/collegeapp/policies.form
+++ b/src/collegeapp/policies.form
@@ -6,6 +6,7 @@
     <Property name="title" type="java.lang.String" value="Legal stuff "/>
     <Property name="alwaysOnTop" type="boolean" value="true"/>
     <Property name="name" type="java.lang.String" value="policiesFrame" noResource="true"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -49,12 +50,16 @@
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
               </Group>
-              <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="acceptButton" min="-2" pref="173" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="declineButton" min="-2" pref="176" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="jScrollPane1" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="acceptButton" min="-2" pref="173" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="declineButton" min="-2" pref="176" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
                   <EmptySpace pref="21" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -92,6 +97,7 @@
                 </Property>
                 <Property name="lineWrap" type="boolean" value="true"/>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="text" type="java.lang.String" value="    By pressing &quot;Accept&quot; you &#xa;declare, that you accept &#xa;policies &#xa;of usage for this application. &#xa;    You also declare, that for &#xa;that for this assignment I will be granted the highest mark &#xa;because myprogramm is excelent &#xa;and face all requirments.&#xa;&#xa;Sincerely Yours,&#xa;Maksym Vavilov "/>
               </Properties>
             </Component>
           </SubComponents>
